- add test for EnableJSView, refs #6344 [jure]
- Add an upgrade step to clear the linkchecker database #6952 #6977 [deroiste]
- make registerManyLinks async. Fix #7032 [pilz]
- Add tests for translationhelper and fix bugs in the find_default method, refs #5152 [jure]
- #6980 only check links in public items which are not outdated [deroiste]
- #7038 register a link checker retriever for SPSpeaker items [deroiste]

1.4.14 (2013-02-15)
-------------------

- Add translation for "Privacy Policy" (footer) #5998 [deroiste]
- Change sender for ecards #6273 [thomasw] 

1.4.13 (2013-01-31)
-------------------

- change default output type to text/x-html-safe for news item description field
  to make ckeditor internal links work, refs #6554 [jure]

1.4.12 (2013-01-08)
-------------------

- When an oshmail is created and prefilled, news items are sorted in reversed order #6484 [thomasw]

1.4.11 (2013-01-02)
-------------------

- #5899 Fix pressrelease_view for HWC2010 [deroiste]


1.4.10 (2012-12-18)
-------------------

- Nothing changed yet.


1.4.9 (2012-12-18)
------------------

- Removed setting DEFAULT_FIELDS, because it is not used anymore - now we
  use EXTENDED_TYPES_DEFAULT_FIELDS setting in osha.adaptation [jcerjak]
- Removed PressRelease schema patches (moved to osha.adaptation) #6105
  [jcerjak]
- Added getContacts method to PressroomHelper which fetches contact info
  from the parent PressRoom object #6105 [jcerjak]
- Rename getTextPieces to getTranslatedReferences and add 'fieldname'
  parameter - now we can use it for multiple reference fields #6105 [jcerjak]
- Added an upgrade step to set 'showContacts' to False for all press
  releases # 6105 [jcerjak]
- patch _getRoles of LDAPUserFolder, fixes #6423 [thomasw]

1.4.8 (2012-11-28)
------------------

- Added upgrade step to transform old link collections #4153 [jure]

1.4.7 (2012-11-10)
------------------

- Taking into account that we now have TWO types of HelpCenterFAQ classes: